# idns

./: .gitignore  Cargo.toml  README.md  UPDATE_LOG.md  index.html  install.json  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
scripts/: support.mjs
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  utils.rs
src-tauri/src/app/: commands.rs  config.rs  dns.rs  menu.rs  mod.rs
src/components/: DNSManager.vue
src/plugins/: cmds.ts  index.ts
src/util/: index.ts
