[package]
authors = ["itxve"]
description = "A Tauri App For Simple Set Dns"
edition = "2021"
license = "MIT"
name = "idns"
repository = "https://github.com/itxve/idns"
rust-version = "1.65.0"
version = "0.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "1.2.1", features = [] }

[dependencies]
anyhow = "1.0.66"
log = "0.4.17"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = {version = "1.2.3", features = [ "updater", "api-all", "macos-private-api", "system-tray"] }
thiserror = "1.0"
sysdns = "0.1.0"
tokio = {version = "1.23.0", features = ["macros"] }
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
lto = true
opt-level = "z"
strip = true
